Fix swap stats buttons readability on phone on origin/job selector

--- a/src/app/origin/origin-selector.component.scss
+++ b/src/app/origin/origin-selector.component.scss
@@ -32,3 +32,8 @@ md-expansion-panel {
 .swap-button {
     text-transform: uppercase;
 }
+
+.swap-buttons {
+    display: flex;
+    flex-wrap: wrap;
+}
